--- a/SDIpaint1/SDIpaint1.vcxproj
+++ b/SDIpaint1/SDIpaint1.vcxproj
@@ -133,4 +133,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="SDIpaint1.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
